--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,16 +1,16 @@
 ---
 application:
-  name: "get-reddit-comments-test"
-  project: "get_com1"
+  name: "get-reddit-comments"
+  project: "get comments"
   organization: "QoveryCommunity"
   storage:
-  - name: "teststorage"
-    size: "10"
-    type: "ssd"
-    mount_point: "/mnt/teststorage"
+  - name: "db"
+    size: "500"
+    type: "hdd"
+    mount_point: "/mnt/db"
 routers:
-- name: "main-get-reddit-comments-test"
+- name: "main-get-reddit-comments"
   routes:
-  - application_name: "get-reddit-comments-test"
+  - application_name: "get-reddit-comments"
     paths:
     - "/*"
